# WebDev2024

Lab1/khanacademy/CSS layout/: floating_clouds.html  group_the_groupers.html  position_planet.html  project.html  the_boxer_model.html
Lab1/khanacademy/CSS text properties/: blog.html  fancy_font_families.html
Lab1/khanacademy/Intro to css/: apples_and_bananas_classes.html  colorful_creature.html  seasonal_ids.html  travel_website.html
Lab1/khanacademy/Intro to html/: perfect_trip.html  wishlist.html  write_a_poem.html  you_can_learn_text_tags.html
Lab1/khanacademy/More css selectors/: a_classy_gallery.html  classes_of_elements.html  descendants_of_khan.html
Lab1/khanacademy/More html tags/: links_for_learning.html  recipe_book.html  the_dinner_table.html
Lab1/udacity/CSS syntax/: ex11.html
Lab1/udacity/HTML problem set/: ex3.html  ex4.html  ex5.html  ex6  ex7.html  ex9.html
Lab1/udacity/HTML syntax/: ex1.html
Lab6/src/app/: app-routing.module.ts  app.component.html
lab10/hhback/api/: admin.py  models.py  serializers.py  urls.py
lab10/lab10/: asgi.py  settings.py  urls.py  wsgi.py
lab2/facebook/: facebook.css  facebook.html
lab2/instagram/: instagram.css  instagram.html
lab2/microsoft/: microsoft.css  microsoft.html
lab3/: to_do_list.html
lab3/to_do_list/: to_do_list.css  to_do_list.js
lab8/lab8/: db.sqlite3  pyproject.toml
lab8/lab8/lab8/: settings.py  urls.py
lab8/lab8/shop/: models.py  serializers.py  urls.py  views.py
lab8/lab8/shop/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_alter_product_price.py
(+10 files in other folders)
